--- a/index.html
+++ b/index.html
@@ -124,5 +124,23 @@ structured by design.</h2>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="child-footer">
+            <div class="devition1">
+                <img src="./assets/logo-footer.png" width="139px">
+                <div class="links">
+                    <h4>Social Links</h4>
+                    <ul>
+                        <li><img src="./assets/X-link.png" width="20px"></li>
+                        <li><img src="./assets/Linkdin.png" width="20px"></li>
+                        <li><img src="./assets/Facebook.png" width="20px"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="devition2">
+                <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
